# sdos-test

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindSDL2_mixer.cmake
src/: CMakeLists.txt  Makefile
src/engine/: CMakeLists.txt  command.cpp  main.cpp  md2.h  md3.h  rendergl.cpp  texture.h
src/fpsgame/: fps.cpp  server.cpp  waypoint.cpp
src/shared/: CMakeLists.txt  tools.cpp  tools.h
